objects/Landowner_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Acre__c</fullName>
        <label>$/Acre</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acres__c</fullName>
        <label>Acres</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Start_Date__c</fullName>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <label>Agreement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Terms__c</fullName>
        <label>Agreement Terms</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auto_Number__c</fullName>
        <displayFormat>Agmt #{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Decommissioning_Extension_Date__c</fullName>
        <label>Decommissioning Extension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decommissioning_Terms__c</fullName>
        <label>Decommissioning Terms</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Agreement Notes</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dev_Extension_Date__c</fullName>
        <label>Dev Extension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dev_PMT_Due_Date__c</fullName>
        <label>Dev PMT Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dev_PMT_End_Date__c</fullName>
        <label>Dev PMT End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Development_PMT__c</fullName>
        <label>Development PMT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Development_Term__c</fullName>
        <label>Development Term</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Easement_Width__c</fullName>
        <label>Easement Width</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Execution_Date__c</fullName>
        <inlineHelpText>Date the Agreement has been signed by all the necessary parties</inlineHelpText>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_Signed_Date__c</fullName>
        <label>Extension Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_Terms__c</fullName>
        <label>Extension Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Guranteees__c</fullName>
        <label>Guranteees</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Landowner_Parcel__c</fullName>
        <label>Landowner Parcel</label>
        <referenceTo>Landowner_Parcel__c</referenceTo>
        <relationshipName>Landowner_Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Obligation_Terms__c</fullName>
        <label>Obligation Terms</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Obligations_Extenstion_Date__c</fullName>
        <label>Obligations Extenstion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Operations_Term__c</fullName>
        <label>Operations Term</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Landowner_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMT_Amount_Paid__c</fullName>
        <label>PMT Amount Paid</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMT_Frequency__c</fullName>
        <label>PMT Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One-time PMT</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMTs_End_Date__c</fullName>
        <inlineHelpText>The Ending Date in which the Payments due will have been paid in full.</inlineHelpText>
        <label>PMTs End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Yrs__c</fullName>
        <label>Term (Yrs)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Agreement</label>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <recordTypes>
        <fullName>Access_Easement</fullName>
        <active>true</active>
        <label>Access Easement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Letter_Of_Intent</fullName>
        <active>true</active>
        <label>Letter Of Intent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Option_to_Lease</fullName>
        <active>true</active>
        <label>Option to Lease</label>
    </recordTypes>
    <recordTypes>
        <fullName>Solar_Energy_Ground_Lease</fullName>
        <active>true</active>
        <label>Solar Energy Ground Lease</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transmission_Easement</fullName>
        <active>true</active>
        <label>Transmission Easement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waiver_of_Surface_Rights_Agreement</fullName>
        <active>true</active>
        <label>Waiver of Surface Rights Agreement</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>